[metadata]
name = openreferee-reference-server
version = attr: openreferee_server.__version__
url = https://github.com/indico/openreferee
author = Indico Team
author_email = indico-team@cern.ch
license = MIT
description = OpenReferee Reference Server
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=CommonMark


[options]
packages = find:
python_requires = >= 3.7
zip_safe = False
include_package_data = True
install_requires =
  werkzeug
  flask
  flask-sqlalchemy
  requests
  sqlalchemy[postgresql]
  webargs
  psycopg2
  apispec[yaml]
  apispec-webframeworks
  pyPDF2

[options.extras_require]
dev =
  black
  flake8
  flask-cors
  isort
  python-dotenv
  ipython
  flask-shell-ipython

[flake8]
exclude=__pycache__
max-line-length=89
