[metadata]
name = openreferee-jacow
version = attr: openreferee_server.__version__
url = https://github.com/indico/openreferee-jacow
author = Indico Team
author_email = indico-team@cern.ch
license = MIT
description = OpenReferee JACoW
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=CommonMark


[options]
packages = find:
python_requires = >= 3.7
zip_safe = False
include_package_data = True
install_requires = file: requirements.txt

[options.extras_require]
dev = file: requirements.dev.txt

[flake8]
exclude=__pycache__
max-line-length = 88
extend-ignore = E203
